--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -140,8 +140,37 @@ and networking protocol.When we learn about the rudimentary knowledge of compute
 \subsection{Weaker Skill}
 	Data modelling is a basic part of data science, because it can help people to comprehend the correlation between varieties and analyse the trend.Besides, the data modelling is very important to develop predictive modelling, we can analyze future trends and make right decisions by using the predictive modelling.We can find potential profit or risk by predicting the future results.Then I figure out that the data modelling is very crucial for the data science, which includes the data analyzing, developing predictive modelling and improve the data management strategies. However, I think this part is currently weakest for me, so I can learn it by watching the videos that are useful for the data modelling, besides I can learn the data modelling on the website,such as Data camp, Coursera, and Chatgpt, these website helps a lot to me.Personally, I would say that the data science covers so many knowledge so that every part seems to be very crucial, however, I the data visualization and data modelling is the most significant to the data science in my view .
 
+\newpage
+\section{Level B: Tools}
+	
+Level B focuses on exploration of key tools used within professional computing employment. All companies make use of a range of technologies and tools (often as part of a tech stack). These tools might be implementation languages; design tools; data analysis tools; collaboration technologies, etc. Each student should identify two tools that are widely used in industry and which relate to the major you are focusing on for this project. You should then describe:
+\begin{enumerate}
+	\item The main functionality of those tools;
+	\item The ways in which those tools are used;
+	\item Any weaknesses or limitations of those tools.
+\end{enumerate}
+	
+As examples (which you shouldn't now use): Computer Science: eclipse; Software Development: github; Cyber Security: Wireshark; Data Science: Hadoop.
+	
+Note also that no two students in the same tutorial should choose the same tools, so your tutor will maintain a list of those that have already been selected. You should therefore check this list and then confirm your choice with your tutor prior to researching your proposed tools and spending time writing about them. (Target = $\sim$200-400 words per tool).
+	
+Also, in order to achieve level B each student needs to be able to demonstrate capability with git and compilation of LaTeX documents from the command line. To demonstrate this, your team (or at least those members who are aiming to attempt level B) should do the following:
+\begin{enumerate}
+	\item Select one member to:
+	\begin{enumerate}
+		\item Create a local github repository for the project. This repository should contain the main LaTeX documents, as well as a subdirectory called ''screengrabs'';
+		\item Create a repository on github for the project;
+		\item Connect your local repository to the remote github repo;
+		\item Push your local repository contents to the remote repo;
+		\item Add all team members (and your tutor and unit coordinator) as members to the remote repo;
+	\end{enumerate}
+		\item Each additional group member should then clone the remote repo;
+		\item Each member aiming to achieve level B should then be able to use the remote repo (and pushing and pulling changes) to demonstrate collaborative editing of the LaTeX documents.
+		\item And each member aiming to achieve level B should also do a screengrab (or multiple screengrabs) showing their local successful compilation, on the command line, of the final LaTeX document. This should be added to the screengrabs folder in your local repo and then pushed to the remote repo so that your tutor can view it.
+\end{enumerate}
+\subsection{Tools for SD:CHANGYIHAO}
 
-
+Your text goes here
 
 
 
