--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -169,8 +169,16 @@ Also, in order to achieve level B each student needs to be able to demonstrate c
 		\item And each member aiming to achieve level B should also do a screengrab (or multiple screengrabs) showing their local successful compilation, on the command line, of the final LaTeX document. This should be added to the screengrabs folder in your local repo and then pushed to the remote repo so that your tutor can view it.
 \end{enumerate}
 \subsection{Tools for SD:CHANGYIHAO}
+The first tool I want use is the IDE. The main functionality of the IDE is use to integrate many different tools in a same place. We can use IDE writing programming, debug programming and running coding. For example, the IDE have editor it can writing code, the IDE have compiler it can compiles code, Also we can use the IDE to debug coding. The programmer can finish these steps in the IDE. 
+According to the IDE provided a integrated development program, we can use IDE in many different situations in software developing. like the Desktop application development, mobile application development, and so on.2
+The main of weakness of IDE is the hard to run if we not use better or higher system sources
+Because IDE merge many different tools therefor, its memory and processor usage can be high. As a result, it may lead the computer slow down or crashes. Also the limitation of the IDE is that each IDE only depend on it special language. For the instance , a IDE use for C++  may not use for the Java.
 
-Your text goes here
+The second tool is the VCS( version control system).The main functionality of the VCS is tracking and management the history of different versions of coding. Also it can let lots of people writing a same code together and if the programmer have demand it can back to previous versions
+The ways of VCS used:
+The software developers can use VCS to manage the version history of code without overwriting the versions. And the programmer can use different branches and tags to control different step of you developing and release time. In this case we can multiple versions at the same time
+The weakness of the VCS is it may happen mistake or conflict when we merge it. Therefore, we should solve this problem by ourselves Also the security of VCS code base is important. When use the VCS we should take some steps to protect like limit other people face the code base of access
+
 
 
 
