--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -179,6 +179,14 @@ The ways of VCS used:
 The software developers can use VCS to manage the version history of code without overwriting the versions. And the programmer can use different branches and tags to control different step of you developing and release time. In this case we can multiple versions at the same time
 The weakness of the VCS is it may happen mistake or conflict when we merge it. Therefore, we should solve this problem by ourselves Also the security of VCS code base is important. When use the VCS we should take some steps to protect like limit other people face the code base of access
 
+\subsection{Tools for CyberSecurity: ZHANG, KAILIN }
+The first tool is kali linux, Kali Linux is a Debian-derived Linux distribution designed for digital forensics and penetration testing. Kali Linux is more like a platform rather than tools and operating system. Kali Linux is widely used in the cybersecurity field, especially for cyber experts and ethical hackers.
+Since Kali Linux is open-source and already has more than 600 penetration testing tools pre installed, people can easily gain access to the Kali Linux and use it to test security controls in systems and networks. Kali Linux can also analyse digital evidence, the behaviour of malware or other software and investigate cyber incidents. In addition, due to its wide range of cybersecurity tools pre installed, people can use it to crack the password, scan for vulnerability and also network sniff.
+The biggest disadvantage for Kali Linux is because of its system. Kali Linux is not ideal for general-purpose computing because it is specifically made for security professions and it is not friendly to those who are new to the Linux system. Plus Kali Linux itself is slow and may contain software malfunctions.
+
+The second tool is called John the Ripper, it is a widely-used password cracking tool in the cybersecurity industry. John the Ripper is an open-source tool that is currently available on many operating systems.Its main purpose is to detect weak Unix passwords.
+One way of using John the Ripper is for password security auditing. By obtaining a list of hashed passwords from a system, involving extracting the passwords from the database. The second way of using it is for password recovery, identifying the file containing the lost password and running John the Ripper to recover the password.
+The limitation for John the Ripper is that it will be time-consuming and not efficient especially towards those complex passwords. Next the entire program depends on the processing power of the hardware, which is a limitation. Last, the program may involves ethical issue and without permission may cause illegal consequences.
 
 
 
