--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -188,6 +188,10 @@ The second tool is called John the Ripper, it is a widely-used password cracking
 One way of using John the Ripper is for password security auditing. By obtaining a list of hashed passwords from a system, involving extracting the passwords from the database. The second way of using it is for password recovery, identifying the file containing the lost password and running John the Ripper to recover the password.
 The limitation for John the Ripper is that it will be time-consuming and not efficient especially towards those complex passwords. Next the entire program depends on the processing power of the hardware, which is a limitation. Last, the program may involves ethical issue and without permission may cause illegal consequences.
 
+\subsection{Tool for Data Science: LIU, YOUTAO}
+I would like to introduce R studio first..The main function of the R studio is that R studio provides a lot of R libraries and tools which supports data processing and visualization, and more. Besides, R studio can support create interactive and dynamic data visualization. R studio can be used in many areas, such as math, statistics, and data modelling. We can use R studio to create a graph by using the codes  “ggplot”, then it can shows the data very clearly.However, there are some limitations. R studio have some barriers in coding, which means the users have to optimize their codes to get higher efficiency, and R studio may be difficult to those people who are not familiar with statistical computing.
+
+For Tableau, it is a very useful tool to data science. It can help users create interactive and dynamic dashboards and reports. Tableau provides a series of visualization tools which can help users analyze the data more clearly, besides Tableau support different types of data, like SQL and Excel. Mostly, Tableau are used in financial area and medical area, for instance, some people in the stock market may use Tableau to better explore and analyze stock market data. Tableau provides rich visualization tools that can help users better understand stock market data such as stock prices, trading volume, and market trends. Through Tableau, users can import stock market data from different data sources and create interactive dashboards and reports using its visualization tools to analyze the dynamics and trends of the stock market, helping them make more informed trading decisions. However, stock market analysis requires deeper data analysis and professional knowledge, and Tableau is just one of the tools used in this field. However, the Tableau may be expensive for some small company, and it is not suitable for data-analyzing in a huge amount.
 
 
 
