level b for ZHANG,BOYUAN

--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -193,7 +193,14 @@ I would like to introduce R studio first..The main function of the R studio is t
 
 For Tableau, it is a very useful tool to data science. It can help users create interactive and dynamic dashboards and reports. Tableau provides a series of visualization tools which can help users analyze the data more clearly, besides Tableau support different types of data, like SQL and Excel. Mostly, Tableau are used in financial area and medical area, for instance, some people in the stock market may use Tableau to better explore and analyze stock market data. Tableau provides rich visualization tools that can help users better understand stock market data such as stock prices, trading volume, and market trends. Through Tableau, users can import stock market data from different data sources and create interactive dashboards and reports using its visualization tools to analyze the dynamics and trends of the stock market, helping them make more informed trading decisions. However, stock market analysis requires deeper data analysis and professional knowledge, and Tableau is just one of the tools used in this field. However, the Tableau may be expensive for some small company, and it is not suitable for data-analyzing in a huge amount.
 
+\subsection{Tools for Computer Science: ZHANG,BOYUAN}
+The first tool in the field of computer science is visual studio code (VSC). Visual studio code is a cross platform and open-sourced code editor developed by Microsoft. Its main functionalities include coding, debugging, and building applications from many platforms.
+To start code, the users need to enter the application and select the programming language and download its corresponding environment and debugging extensions. With extensions, visual studio code can highlight, auto complete and code snippets to make programming more efficient with the given language syntax. Visual studio code also has a built in debugger that is used to identify errors in users’ code, it also provides the functionality of variables, break points to go through the program line by line. Visual studio code can also mange projects such as creating and managing folders, files, and work with others.
+While visual studio code is one of the most popular code editors, it still has many weaknesses. Memory usage is a weaknesses as visual studio code can be memory intensive, when running big projects can lead to crashes or low performance.
 
+The second tool I chose is git. Git is a version control system that allows developers to share codebase and work with each other. Its main functionality is version control and collaboration. 
+Git allows users to keep different versions and track changes to code. After installing git, the user needs to need to initialize a git repository using the git init command. After repository is initialized, users can now stage and commit changes using git add command and commit the changes to the repository using the git commit command. Git allows users the collaborate with others, users can share repositories with others by pushing it into GitHub, other contributors can clown the repository to local and make changes.
+Git is a widely used version control system, however it still has many weaknesses. Git has the problem of merge conflicts, when multiples users work on the same codebase, merge conflict can be a commonly occurring issue. Git also has a steep learning curve, so that for new users who are beginners, the functionalities can be challenging and difficult to use.
 
 
 
