--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -95,6 +95,9 @@
 \item \textbf{3. Online websites} – When learning a new skill in tech, we usually search on google, and many times we come across high quality websites that serve educational purposes which are useful for us to learn a new skill. Such websites are mostly technical; therefore, it might not be as friendly as the previous 2 resources to beginners. Websites such like W3Schools teaches programming skills and there are also websites like Stackoverflow where you can discuss specific problems you meet during the course of learning. It is not as interesting to learn from websites compared to the previous 2 resources, but it is still a generally good.
 \item \textbf{4.ChatGPT} – This new online AI chatbot has a rapid growth in its popularity. It is useful resource to learn as you are asking all questions regarding to the skill you are trying to learn, and it will provide you with answers that are specific and generally correct. The problem with ChatGPT is that some information it provides is not always correct. People might become relied to it and lose the motivation to study for the new skill.
 \item \textbf{5.Books} – Due to the rapid development of technology, people tend to read less nowadays. However, it is still a good way to study as it provides the entire knowledge framework of specified topic. In the tech industry, there are discoveries everyday, and the problem with books is that it might not always be up to date. Books are not as efficient compared to other sources of learning, and the information it provides might be old and have no implementation in the current industry.
+
+submission 2 contribution overview: In this sumbission, it was clear what each member is required to be as each of us work on individual tasks in corresponding fields. I first decided the tools to be discussed for level B, and we helped each other to update version control on github repository. We have our tutorial on Thursday and we go the library after the tutorial every week to work on level B and help each other with the technical part.
+
 \end{itemize}
 Contribution Overview
 Our group meets up every week to discuss our roles and help each other out. In the first few meetings, we discussed our strengths and weaknesses and allocated ourselves to roles that are suitable for us. After the first few meetings, it was clear what the individuals in the group had to do, and we just helped ourselves with problems we encountered when completing individuals’ work. There were not any significant variations in the level of involvement, as all work was allocated equally so that each member of our group had the same workload as everyone else. For the first submission, we will just combine each group member's section into an entire document using LaTeX.
