--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -107,40 +107,40 @@ Our group meets up every week to discuss our roles and help each other out. In t
 \newpage
 \section{Level A: Basic Skills}
 \subsection{Skills for SW Development: HAO,CHANGYI}
-\subsection{stronger skill}
+\subsubsection{stronger skill}
 	I think I am good at programming/software development, which is a skill on the SFIA list.This skill is a basic and key skill in the field of software development.
 The first reason is that if you master programming languages, development tools, and frameworks,it can increase the quality and efficiency of development, saving time and reducing mistakes when writing code. This can also increase the quantity of programming output. Software quality is very important because it is directly related to the reliability and security of a software system.
 	The second reason is to better meet the needs of customers. For example, when customers approach our company for app development, having good skills in this area can help us easily understand their requirements and more easily satisfy their needs.
 To be honest, I am just slightly better at this than other people. This semester, I have a course to study Python, and I use my free time to study C++. In this case, I can use different languages in different situations. For instance, C++ is suitable for the development of underlying systems and high-performance computing programs like embedded systems, while Python is suitable for small-sized or original projects such as AI, automated scripts, and data science. In real-world conditions, we can use Python and C++ to write mixed code to maximize the quality of our code.
-\subsection{Weaker Skill}
+\subsubsection{Weaker Skill}
 I think the main major defect is skill of Vulnerability research.The vulnearability research can help promgarmers find and fix the.This make sure that the software you are developing is secure and is reliable and marketable.If you not mix this problems on time maybe some immoral hackers will attack the system that make the system paralys.This lead some customers' personal information will be revealed.Therefore, the customers will prosecute the programmers who design these software.As a result the programmers who design these software give compensation to customers.In the worst case, if there are not fix bugs in the software, then legal liability will be pursueded,because developers may have failed to take the necessary steps to protect user information.
 	There are three ways to improve these skill.First of all I should study network security knowledge to improve this skill.These are many basic knowledge video about network security in 	YouTube.Therefore I learn the knowlegde on line.Then I should learn the rudimentary knowledge of computer such as operating system
 and networking protocol.When we learn about the rudimentary knowledge of computer we can understand why these bugs will be produced.Moveover how to use the progarmming to fix differenrt kinds of bugs.The third things i need do is research vulnerabilities.Beacause when i learn this knowledge it can prevent the same bug from happening again
 
 
-\section{Skills for CyberSecurity: ZHANG, KAILIN}
-\subsection{stronger skill}
+\subsubsection{Skills for CyberSecurity: ZHANG, KAILIN}
+\subsubsection{stronger skill}
 	I chose Threat Intelligence from the SFIA skills list because I think it is relevant to my major, Cybersecurity. Cybersecurity’s main goal in general is to protect the user's computer and network from attack, and detecting potential threats is a key element in preventing the attack. It is essential for people in Cybersecurity to learn threat intelligence, it covers gathering data, processing threat data and enabling security[1]. These elements are without a doubt relevant to a cybersecurity major. Frankly speaking I don’t have a strength that can let me stand out in threat intelligence yet but I do have some advantages in learning threat intelligence.First of all,I am learning R in one of my data science courses. R is a programming language for statistical computing. In my own words, R is very helpful in manipulating, processing and packaging data for data analysis, etc. A big part of cybersecurity is to protect users’ data and information, this also involves threat intelligence. By sufficiently learning R, I will be able to deal with the data gathered from various sources and by having a deeper learning with data I will be able to know how to protect the data as well. Secondly, I chose PHP for my self-learning topic, which is a general-purpose scripting language for building a web. It is very common for people nowadays to use the internet and surf the web, which might contain potential threats embedded in different websites. Knowing how the PHP coding works can help me further detect the potential threats and enable security tools for prevention.
-\subsection{Weaker Skill}
+\subsubsection{Weaker Skill}
 	The skill that I feel like I am currently weak in but still plays a major part in Cybersecurity is Digital Forensics. Digital forensics involves finding evidence on computers and other devices[2]. Evidence that is used to support one’s illegal act by using the internet, which is also what Cybersecurity people do for their job.Preventing one’s data and information leakage, and if someone attacks and tries to get information and data illegally Cyber securities will then try to trace where is the information leaked and gather data for evidence supporting this “criminal” act. In digital Forensics, data collection is also a main part. Trying to dig up the small evidence requires the user to gather data from the usage of computers and the internet, which needs users to have a good understanding in handling data. One of the things that I can improve is the way of collecting data. Web scraping and web crawling is a required skill in my opinion for Digital Forensic that I have to know and learn how to use. Web scraping is extracting data from websites and web crawling is finding and discovering url[4]. These two techniques will be efficient in collecting data from the internet. Next, I have to improve my scripting and coding language, for example Java-script, python and other languages. For example,web scraping requires a solid knowledge of python, so learning different relevant coding language will improve my capability in digital forensics.
 
 %=======================================================================================
 
 \newpage
-\section{Skills for Computer Science: ZHANG,BOYUAN}
-\subsection{stronger skill}
+\subsection{Skills for Computer Science: ZHANG,BOYUAN}
+\subsubsection{stronger skill}
 	The skill that I believe I am currently the strongest is numerical analysis. 	Numerical analysis is necessary for the major of computer science, because in areas such as machine learning, it requires to train computers to learn from data, which heavily relies on mathematical concepts such as linear algebra, sets and probability. Mathematics has been one of my strongest subjects in high-school and first year of university, as I achieved great grades in mathematics related subjects, therefore I am comfortable with numerical analysis. I am currently taking COMP2123, which is a course about data structures and algorithms, we were introduced the concepts of iterations and runtime, and I was able to understand that area of knowledge in a fast pace. Such concepts are crucial in the major of  computer science, as it will help with the development of efficient algorithms, and apply numerical optimization, which is critical in many areas of computing, such as robotics and machine learning. Overall, numerical analysis is important in many areas around computer sciences, especially algorithm design and machine learning.
-\subsection{Weaker Skill}	
+\subsubsection{Weaker Skill}	
 	The skill in which I believe I am currently the weakest is innovation. Innovations leads to the creation of new technologies in which we can use on computers, such as artificial intelligence. The tech industry is also based on innovations from new ideas and product; therefore, innovation is crucial in the major of computer science. I usually find myself good at following instructions, and lack of creativity. To improve my innovation, I think I will try communicating more with classmates, so that we can discuss each other’s ideas and perspective, so that my thinking will become various as I can think from many other perspectives, which should improve my innovation. I should also start taking more risks and learn from failures so that I can get more insights on decision making and think from different perspectives. I can also start daydreaming, although it may sound ridiculous, but in this rapidly changing society, anything can possibly happen with the help of technology. Overall, innovation plays in a crucial role in the computer science major, and it is also an area I need to improve on, I will try to get into more discussions and dream big.
 
 
 
 
 
-\section{Skills for Data Science: LIU, YOUTAO}
-\subsection{stronger skill}
+\subsection{Skills for Data Science: LIU, YOUTAO}
+\subsubsection{stronger skill}
 	Firstly, Data visualisation enables people to clearly understand concepts, ideas, and facts through charts and photograph. Obviously, R studio is a great tool for converting data into charts. In R studio, we can use some codes to upload the database and plot a graph, such as ggplot and barplot. The reason why data visualisation is significant is that it can clearly demonstrate the correlation between data and easily identify trends and outliers of data. Besides, the data visualisation can help the public to comprehend the data, compared to numbers or text, charts are easier for people to remember and understand. For instance, a college student who wants to start a business can make decisions by data visualization to find the sales volume of different products in a certain industry and the sales situation in different seasons and regions.Currently, I think this parts is what I am best at, the R studio does not require much programming foundation, but it can easily upload database into charts using codes. For example, if I want to figure out some questions, such as how much money they spend on their food a day, I have to make a survey to get the data, and then I collect the data and upload it to R studio, then I can get graphs by using R language.
-\subsection{Weaker Skill}
+\subsubsection{Weaker Skill}
 	Data modelling is a basic part of data science, because it can help people to comprehend the correlation between varieties and analyse the trend.Besides, the data modelling is very important to develop predictive modelling, we can analyze future trends and make right decisions by using the predictive modelling.We can find potential profit or risk by predicting the future results.Then I figure out that the data modelling is very crucial for the data science, which includes the data analyzing, developing predictive modelling and improve the data management strategies. However, I think this part is currently weakest for me, so I can learn it by watching the videos that are useful for the data modelling, besides I can learn the data modelling on the website,such as Data camp, Coursera, and Chatgpt, these website helps a lot to me.Personally, I would say that the data science covers so many knowledge so that every part seems to be very crucial, however, I the data visualization and data modelling is the most significant to the data science in my view .
 
 \newpage
@@ -193,10 +193,9 @@ Git is a widely used version control system, however it still has many weaknesse
 
 \section{Bibliography} 
 \begin{itemize}
-\item{{https://sfia-online.org/en/sfia-8/all-skills-a-z}}
-\item{[1] SFIA, Threat Intelligence THIN, 2022, see https://sfia-online.org/zh/sfia-8/skills/threat-intelligence}
-\item{[2] SFIA, Digital Forensics DGFS, 2022, see https://sfia-online.org/zh/sfia-8/skills/digital-forensics}
-
-
+\item{\url{https://sfia-online.org/en/sfia-8/all-skills-a-z}}
+\item{[1] SFIA, Threat Intelligence THIN, 2022, see \url{https://sfia-online.org/zh/sfia-8/skills/threat-intelligence}}
+\item{[2] SFIA, Digital Forensics DGFS, 2022, see \url{https://sfia-online.org/zh/sfia-8/skills/digital-forensics}}
 \end{itemize}
+
 \end{document}
