--- a/Skill Submission 1/Learning.tex
+++ b/Skill Submission 1/Learning.tex
@@ -118,7 +118,7 @@ I think the main major defect is skill of Vulnerability research.The vulnearabil
 and networking protocol.When we learn about the rudimentary knowledge of computer we can understand why these bugs will be produced.Moveover how to use the progarmming to fix differenrt kinds of bugs.The third things i need do is research vulnerabilities.Beacause when i learn this knowledge it can prevent the same bug from happening again
 
 
-\subsubsection{Skills for CyberSecurity: ZHANG, KAILIN}
+\subsection{Skills for CyberSecurity: ZHANG, KAILIN}
 \subsubsection{stronger skill}
 	I chose Threat Intelligence from the SFIA skills list because I think it is relevant to my major, Cybersecurity. Cybersecurity’s main goal in general is to protect the user's computer and network from attack, and detecting potential threats is a key element in preventing the attack. It is essential for people in Cybersecurity to learn threat intelligence, it covers gathering data, processing threat data and enabling security[1]. These elements are without a doubt relevant to a cybersecurity major. Frankly speaking I don’t have a strength that can let me stand out in threat intelligence yet but I do have some advantages in learning threat intelligence.First of all,I am learning R in one of my data science courses. R is a programming language for statistical computing. In my own words, R is very helpful in manipulating, processing and packaging data for data analysis, etc. A big part of cybersecurity is to protect users’ data and information, this also involves threat intelligence. By sufficiently learning R, I will be able to deal with the data gathered from various sources and by having a deeper learning with data I will be able to know how to protect the data as well. Secondly, I chose PHP for my self-learning topic, which is a general-purpose scripting language for building a web. It is very common for people nowadays to use the internet and surf the web, which might contain potential threats embedded in different websites. Knowing how the PHP coding works can help me further detect the potential threats and enable security tools for prevention.
 \subsubsection{Weaker Skill}
