--- a/Skills/main.tex
+++ b/Skills/main.tex
@@ -76,7 +76,7 @@
 	\hline
 	\hline
 	\raggedright{\studA} & \sidA & A,B & C,D& \majA \\
-	\raggedright{\studB} & \sidB & X & A& \majB \\
+	\raggedright{\studB} & \sidB & A,B & C,D& \majB \\
 	\raggedright{\studC} & \sidC & X & A & \majC \\
 	\raggedright{\studD} & \sidD & X & A & \majD \\
 	\hline
@@ -273,9 +273,50 @@ Custom command is a command that the user can define to achieve certain function
 
 
 
-\subsection{Advanced skills: \studB}
+\subsection{Advanced skills:CHANGYIHAO}
+\subsubsection{Git:Forking and Special files}
+Forking: If you want to share you coding to each other project Or develop from someone else's existing project you can use fork. In this way it you are free to make changes in your own copy without affecting the original project. When you willing to add this project, firstly you should Click the "Fork" button, then clone it to your local computer to amend it. After amend if you want add your modification in to project you can use pull request.\cite{c1}
 
-Explain your use of the advanced Git and \LaTeX\ features. 
+Special Files: in git there are some special files which are help us to use git better. For example,the "gittgonre" file it used to specify which files or directories do not need to be tracked by Git. Like we can use coding:
+\cite{c2}
+\begin{verbatim}
+*.log
+
+node_modules/
+
+build/
+
+*.tmp
+
+debug/
+
+doc/*.pdf
+
+*.class
+
+.DS_Store
+Thumbs.db
+
+.idea/
+*.iml
+.vscode/
+
+package-lock.json
+
+\end{verbatim}
+
+\includegraphics{c1.png}
+
+\subsubsection{Latex:: Footnotes/Margin Notes and Creating New }
+
+Footnotes/Margin notes: In latex you can use "\footnote{}" to add the footnotes which will be added in the bottom of the page.Also you can use "\marginpar{}" to add the margin notes which will be added in the edge of the page\cite{c3}
+
+Creating New Environment: Latex can let you define your own environment.It is very useful to create some special text formatting. For example the"highlight" can make you text bold.\cite{c4}
+
+\includegraphics{c4.png}
+
+
+\includegraphics{c3.png}
 
 \subsection{Advanced skills: \studC}
 
@@ -307,9 +348,23 @@ Furthermore, innovation is tightly bonded with entrepreneurship and the ability 
 With the development of artificial intelligence technologies, the industry of computer science will demand professionals at the front of technological development, who are able to leverage the technologies to solve problems.  Innovation, as a skill, will be an important trait for individuals in the industry as it allows them for success and contribute the fast-paced developing industry of computer science.
 
 
-\subsection{Evolution of \majB: \studB}
+\subsection{Evolution of SW Development:CHANGYIHAO}
+\subsubsection{Further change}
+In the next five years, I think the most change is a AI will be use more times in the code generation and development automation. Because the automation is an important trend in software development.\cite{d1}
 
-Your text goes here
+First the use of AI in code generation will become more mature. It can set up some coding according to the programmers needed. Also with development of Al it can be create some complex coding even automatically generate entire application or system code. As a result it will make the process of software development more efficient\cite{d2}
+
+Secondly, The AI can have a big useful in developing automation areas. For instance, AI can use in the automated testing. It can quickly and easily to find errors and bugs in code (debug more efficiently).Also AI can help to predict possible errors and problems before a team do projects . As a result it not only increase the efficient of coding but also reduce the work pressure and afford of the engineers\cite{d3}   
+                           
+However, It will may make some basic code engineers unemployment. Because the coding writing by AI will have high quality and more efficient than some basic engineers (such as gpt-4) .Therefore it can forced engineers to learn advanced skills to make sure they can't be replaced by AI
+
+\subsubsection{SFIA skill}
+The skill will have biggest increase is the PROG:
+
+The first reason is that Low code/no code development platforms have grown significantly. This platforms allow the programmers with non-technical backgrounds to set up and deploy applications without writing coding hand by hand
+However, while these tools can expose more people to software development, but still need some developers who have a lot of experience to solve some complex tests such as Integrate different systems, optimize application performance, or handle complex business logic. As a result it will increase the demand for the developer who are good at these tools and handle traditional programming tasks\cite{d4}
+
+The second reason is that AI has begun to play an important role in software development area, where it is used to automate many tasks such as code review, error detection (debug), and even automatic code generation. For example, the “Copilot” tool of “Github” is use AI to help developers writing code more efficiently. This means that future developers will need to not only master programming languages, but also understand how to use these AI tools effectively to improve their productivity. They need to know how to train and optimize these tools to best suit their specific needs.\cite{d5}
 
 \subsection{Evolution of \majC: \studC}
 
