--- a/Skills/main.tex
+++ b/Skills/main.tex
@@ -76,8 +76,8 @@
 	\hline
 	\hline
 	\raggedright{\studA} & \sidA & A,B & C,D& \majA \\
-	\raggedright{\studB} & \sidB & A,B & C,D& \majB \\
-	\raggedright{\studC} & \sidC & X & A & \majC \\
+	\raggedright{\studB} & \sidB & X & A& \majB \\
+	\raggedright{\studC} & \sidC & A,B & C,D & \majC \\
 	\raggedright{\studD} & \sidD & X & A & \majD \\
 	\hline
 \end{tabular}
@@ -318,11 +318,11 @@ Creating New Environment: Latex can let you define your own environment.It is ve
 
 \includegraphics{c3.png}
 
-\subsection{Advanced skills: \studC}
+\subsection{Advanced skills:}
 
 Explain your use of the advanced Git and \LaTeX\ features. 
 
-\subsection{Advanced skills: \studD}
+\subsection{Advanced skills:}
 
 Explain your use of the advanced Git and \LaTeX\ features. 
 
@@ -366,11 +366,11 @@ However, while these tools can expose more people to software development, but s
 
 The second reason is that AI has begun to play an important role in software development area, where it is used to automate many tasks such as code review, error detection (debug), and even automatic code generation. For example, the “Copilot” tool of “Github” is use AI to help developers writing code more efficiently. This means that future developers will need to not only master programming languages, but also understand how to use these AI tools effectively to improve their productivity. They need to know how to train and optimize these tools to best suit their specific needs.\cite{d5}
 
-\subsection{Evolution of \majC: \studC}
+\subsection{Evolution of \majC:}
 
 Your text goes here
 
-\subsection{Evolution of \majD: \studD}
+\subsection{Evolution of \majD:}
 
 Your text goes here
 
