--- a/Skills/main.bib
+++ b/Skills/main.bib
@@ -213,3 +213,63 @@
   day = {2},
   url = {https://www.washington.edu/innovation/2016/06/02/is-technology-crucial-for-innovation/},
 }
+@misc{c1,
+    title = {Fork a file within a Git repository},
+    author = {eykanal},
+    year = {2012},
+    url = {https://stackoverflow.com/questions/11366428/fork-a-file-within-a-git-repository},
+}
+@misc{c2,
+    title = {How to Use the .github Repository},
+    author = {Anish De},
+    year = {2021},
+    url = {https://www.freecodecamp.org/news/how-to-use-the-dot-github-repository/},
+}
+
+@misc{c3,
+    title = {LaTeX/Footnotes and Margin Notes},
+    author = {wikibooks},
+    url = {https://en.wikibooks.org/wiki/LaTeX/Footnotes_and_Margin_Notes},
+}
+
+@misc{c4,
+    title = {How to Define New Environments - LaTeX Tutorial},
+    author = {Coding Perspective},
+    year = {2022},
+    url = {https://www.youtube.com/watch?v=r_DQnSXLHBc},
+}
+
+
+@misc{d2,
+    title = {AI and the future of software development},
+    author = {Matt Asay},
+    year = {2023},
+    url = {https://www.infoworld.com/article/3691892/ai-and-the-future-of-software-development.html},
+}
+
+@misc{d1,
+    title = {The Future of Software Will Be Hyperplexed},
+    author = { Pranay Ahlawat, Vikas Taneja, and Bernd Schlotter},
+    year = {2021},
+    url = {https://www.bcg.com/publications/2021/hyperplexed-enterprise-software-architectures},
+}
+@misc{d3,
+    title = {The Future of Software Development in 2022 and Beyond},
+    author = {STEVE TAPLIN},
+    year = {2022},
+    url = {https://www.entrepreneur.com/science-technology/the-future-of-software-development-in-2022-and-beyond/403829#:~:text=The%20power%20of%20artificial%20intelligence%20%28AI%29%20will%20also,better%20outcomes%2C%20efficiency%2C%20automation%20and%20enhanced%20digital%20experience.},
+}
+@misc{d5,
+    title = {Software development in 2021 and beyond},
+    author = {Amanda Silver},
+    year = {2021},
+    url = {https://blogs.microsoft.com/blog/2021/01/14/software-development-in-2021-and-beyond/},
+}
+
+@misc{d4,
+    title = {The Rise Of No-Code And Low-Code Solutions: Will Your CTO Become Obsolete},
+    author = {Robert Krajewski and Forbes Technology Council},
+    year = {2021},
+    url = {https://www.forbes.com/sites/forbestechcouncil/2021/10/14/the-rise-of-no-code-and-low-code-solutions-will-your-cto-become-obsolete/?sh=702ca1ae4aaf},
+}
+
